--- a/src/app/pages/como-ajudar/page.module.css
+++ b/src/app/pages/como-ajudar/page.module.css
@@ -36,21 +36,21 @@
 }
 
 .tituloPrincipal {
-  font-family: 'Baloo 2', sans-serif;
-  font-size: 36px;
-  font-weight: 700;
-  color: #0D4F97; 
-  margin-bottom: 16px; 
-  text-align: center;
+  font-family: 'Baloo 2', sans-serif !important;
+  font-weight: 700 !important;
+  font-size: 48px !important;
+  line-height: 100% !important;
+  color: #004F97 !important;
+  text-align: center !important;
+  margin-bottom: 24px !important;
 }
 
 .subtitulo {
-  font-family: 'Baloo 2', sans-serif;
-  font-size: 36px;
-  font-weight: 600;
-  color: #1E1E1E; 
-  line-height: 140%; 
-  letter-spacing: 0%; 
-  margin-bottom: 12px; 
-  text-align: center;
+  font-family: 'Baloo 2', sans-serif !important;
+  font-weight: 600 !important;
+  font-size: 36px !important;
+  line-height: 140% !important;
+  color: #1E1E1E !important;
+  text-align: center !important;
+  margin-bottom: 32px !important;
 }
