--- a/src/app/components/reader/Reader.module.css
+++ b/src/app/components/reader/Reader.module.css
@@ -13,7 +13,7 @@
 
 .button {
     padding: 10px 20px;
-    font-size: 15px;
+    font-size: 0.94rem;
     cursor: pointer;
     border: none;
     border-radius: 999px;
