--- a/src/app/pages/contato/page.module.css
+++ b/src/app/pages/contato/page.module.css
@@ -9,7 +9,7 @@
 }
 
 .heading1 {
-  font-size: 60px;
+  font-size: 3.75rem;
   color: #f28c38;
   margin-bottom: 40px;
 }
@@ -36,14 +36,14 @@
 }
 
 .heading2 {
-  font-size: 18px;
+  font-size: 1.13rem;
   margin: 0;
 }
 
 .link {
   text-decoration: none;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 0.88rem;
 }
 
 .flexRow {
