--- a/src/app/pages/como-ajudar/page.module.css
+++ b/src/app/pages/como-ajudar/page.module.css
@@ -35,30 +35,29 @@
   font-weight: bold;
 }
 
-.tituloPrincipal {
-  font-family: 'Baloo 2', sans-serif !important;
-  font-weight: 700 !important;
-  font-size: 48px !important;
-  line-height: 100% !important;
-  color: #004F97 !important;
-  text-align: center !important;
-  margin-bottom: 24px !important;
+.tituloPrincipal:global(.MuiTypography-h2) {
+  font-family: 'Baloo 2', sans-serif;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 100%;
+  color: #004F97;
+  text-align: center;
+  margin-bottom: 24px;
 }
 
-.subtitulo {
-  font-family: 'Baloo 2', sans-serif !important;
-  font-weight: 600 !important;
-  font-size: 36px !important;
-  line-height: 140% !important;
-  color: #1E1E1E !important;
-  text-align: center !important;
-  margin-bottom: 32px !important;
+.subtitulo:global(.MuiTypography-h4),
+.tituloFormulario:global(.MuiTypography-h4) {
+  font-family: 'Baloo 2', sans-serif;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 140%;
+  color: #1E1E1E;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
-.tituloFormulario {
-  font-family: 'Baloo 2', sans-serif !important;
-  font-size: 24px !important;
-  font-weight: 600 !important;
+.tituloFormulario:global(.MuiTypography-h4) {
+  font-size: 24px;
   color: #0D4F97;
   margin-bottom: 32px;
   text-align: center;
