--- a/src/app/pages/como-ajudar/page.module.css
+++ b/src/app/pages/como-ajudar/page.module.css
@@ -31,10 +31,6 @@
   z-index: 10;
 }
 
-.heroTitle {
-  font-weight: bold;
-}
-
 .tituloPrincipal:global(.MuiTypography-h2) {
   font-family: 'Baloo 2', sans-serif;
   font-weight: 700;
@@ -45,20 +41,22 @@
   margin-bottom: 24px;
 }
 
-.subtitulo:global(.MuiTypography-h4),
-.tituloFormulario:global(.MuiTypography-h4) {
-  font-family: 'Baloo 2', sans-serif;
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 140%;
-  color: #1E1E1E;
-  text-align: center;
-  margin-bottom: 32px;
+.subtitulo:global(.MuiTypography-h4) {
+    font-family: 'Baloo 2', sans-serif;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 140%;
+    color: #1E1E1E;
+    text-align: center;
+    margin-bottom: 32px;
 }
 
 .tituloFormulario:global(.MuiTypography-h4) {
-  font-size: 24px;
-  color: #0D4F97;
-  margin-bottom: 32px;
-  text-align: center;
+    font-family: 'Baloo 2', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 140%;
+    color: #0D4F97;
+    text-align: center;
+    margin-bottom: 32px;
 }
