--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -40,10 +40,9 @@
 }
 
 .intro h3 {
-	font-weight: bold;
-	margin-bottom: 1rem;
-	margin-top: 50px;
-	margin-bottom: 40px;
+  font-weight: bold;
+  margin-top: 3.125rem;
+  margin-bottom: 2.5rem;
 }
 
 .intro p {
