--- a/src/app/pages/30anos/page.module.css
+++ b/src/app/pages/30anos/page.module.css
@@ -33,3 +33,16 @@
     border-radius: 15px;
     margin-bottom: 50px;
 }
+
+.ctaButton {
+	background-color: #1a4f93;
+	color: white;
+	border: none;
+	padding: 0.8rem 1.5rem;
+	border-radius: 50px;
+	margin-top: 1rem;
+	cursor: pointer;
+	font-weight: bold;
+	transition: background-color 0.3s ease;
+    margin-bottom: 20px;
+}
