fix: corrige rotas de audio descricao e imagens em todo o site

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,5 @@
 .hero {
-	background-image: url("/apae-site-comemorativo/bg-apaaequipe.jpg");
+	background-image: url("/bg-apaaequipe.jpg");
 	background-size: cover;
 	background-position: top center;
 	background-repeat: no-repeat;
