--- a/src/app/pages/login/page.module.css
+++ b/src/app/pages/login/page.module.css
@@ -6,7 +6,7 @@
   width: 100%;
   padding: 1rem; 
 
-  background-image: url('/apae-site-comemorativo/bg-apaaequipe.jpg');
+  background-image: url('/bg-apaaequipe.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
