--- a/src/app/pages/contato/page.module.css
+++ b/src/app/pages/contato/page.module.css
@@ -12,6 +12,7 @@
   font-size: 3.75rem;
   color: #f28c38;
   margin-bottom: 40px;
+  margin-top: 40px;
 }
 
 .contactContainer {
@@ -66,7 +67,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   width: 100%;
   max-width: 1200px;
 }
