--- a/src/app/components/bloco-expansivel/BlocoExpansivel.module.css
+++ b/src/app/components/bloco-expansivel/BlocoExpansivel.module.css
@@ -2,10 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1rem; 
     padding: 1.5rem;
-    background-color: #ffffff;
-    border: 1px solid #ddd;
+    border: 1px solid #004F97;
     border-radius: 8px;
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1); 
     text-align: center;
