--- a/src/app/pages/como-ajudar/page.module.css
+++ b/src/app/pages/como-ajudar/page.module.css
@@ -1,50 +1,69 @@
 .pageContainer {
-  min-height: 100vh;
+    min-height: 100vh;
 }
 
 .contentContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  padding: 0 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    padding: 0 16px;
 }
 
 @media (min-width: 768px) {
-  .contentContainer {
-    flex-direction: row;
-  }
+    .contentContainer {
+        flex-direction: row;
+    }
 }
 
 .heroBanner {
-  position: relative;
-  width: 100%;
-  height: 200px; 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: relative;
+    width: 100%;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.heroBanner img {
+    object-position: 35% center;
+}
+
+@media (min-width: 600px) {
+    .heroBanner {
+        height: 200px;
+    }
+    .heroBanner img {
+        object-position: center center;
+    }
 }
 
 .heroText {
-  position: absolute;
-  text-align: center;
-  color: white; 
-  z-index: 10;
+    position: absolute;
+    text-align: center;
+    color: white;
+    z-index: 10;
 }
 
 .tituloPrincipal:global(.MuiTypography-h2) {
-  font-family: 'Baloo 2', sans-serif;
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 100%;
-  color: #004F97;
-  text-align: center;
-  margin-bottom: 24px;
+    font-family: 'Baloo 2', sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 100%;
+    color: #004F97;
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+@media (min-width: 600px) {
+    .tituloPrincipal:global(.MuiTypography-h2) {
+        font-size: 48px;
+    }
 }
 
 .subtitulo:global(.MuiTypography-h4) {
     font-family: 'Baloo 2', sans-serif;
     font-weight: 600;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 140%;
     color: #1E1E1E;
     text-align: center;
@@ -52,12 +71,24 @@
     margin-bottom: 32px;
 }
 
+@media (min-width: 600px) {
+    .subtitulo:global(.MuiTypography-h4) {
+        font-size: 36px;
+    }
+}
+
 .tituloFormulario:global(.MuiTypography-h4) {
     font-family: 'Baloo 2', sans-serif;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 140%;
     color: #0D4F97;
     text-align: center;
     margin-bottom: 32px;
+}
+
+@media (min-width: 600px) {
+    .tituloFormulario:global(.MuiTypography-h4) {
+        font-size: 24px;
+    }
 }
